Fixes bug with the twitter count. Removes corny, bug-ridden, background color change on click of like button. Fixes viewport and masonry bug on iOS.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,16 +33,9 @@ html, html a {
 body {
   font-family: "FF Tisa Web Pro", Georgia, Cambria, "Times New Roman", Times, serif;
   color: #444;
-  background: #F9F9F9;
+  background-color: #F9F9F9;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  -webkit-transition: background-color 2s;
-  -moz-transition: background-color 2s;
-  transition: background-color 2s;
-}
-
-body.the-lover {
-  background-color: #ffebeb;
 }
 
 section {
